CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(ìmgui)

SET(IMGUI_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source" CACHE STRING "ImGui include directory")

INCLUDE_DIRECTORIES(${IMGUI_INCLUDE_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ADD_DEFINITIONS(-D_SCL_SECURE_NO_DEPRECATE)

FILE(GLOB SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${IMGUI_INCLUDE_DIR}/*.cpp)
FILE(GLOB HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${IMGUI_INCLUDE_DIR}/*.h)

message(${HEADERS})
message(${SOURCES})

add_library(${PROJECT_NAME} STATIC ${HEADERS} ${SOURCES})

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${HEADERS} DESTINATION include)